// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page basic 1`] = `
<div>
  <div
    class="mt--16 mx--16 mb-16 bgWhite"
    sx="[object Object]"
  >
    <nav
      class="ant-breadcrumb"
    >
      <ol />
    </nav>
  </div>
  <div
    class="p-16 bg-white rounded-8"
  />
</div>
`;

exports[`Page breadcrumb match menu 1`] = `
<div>
  <div
    class="mt--16 mx--16 mb-16 bgWhite"
    sx="[object Object]"
  >
    <nav
      class="ant-breadcrumb"
    >
      <ol>
        <li>
          <span
            class="ant-breadcrumb-link"
          >
            <a
              href="/admin"
            >
              首页
            </a>
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </li>
        <li>
          <span
            class="ant-breadcrumb-link"
          >
            <a
              href="/admin/test"
            >
              Test Page
            </a>
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </li>
        <li>
          <span
            class="ant-breadcrumb-link"
          >
            <a
              href="/admin/test/child"
            >
              Child Page
            </a>
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="p-16 bg-white rounded-8"
  />
</div>
`;

exports[`Page page with css props 1`] = `
<div>
  <div
    class="mt--16 mx--16 mb-16 bgWhite"
    sx="[object Object]"
  >
    <nav
      class="ant-breadcrumb"
    >
      <ol />
    </nav>
  </div>
  <div
    class="p-16 bg-white rounded-8 mb-2"
  />
</div>
`;
